# minercaftVK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  logger.ini  runcfg.json
doc/: beszamalo.docx  pres.pptx
shaders/: compile.bat  shader.vert  simple.vert
src/: app.cpp  app.h  camera.cpp  camera.h  image_cache.cpp  image_cache.h  main.cpp  model_loader.cpp  model_loader.h  pch.cpp  pch.h  runcfg.cpp  runcfg.h  utils.cpp  utils.h  vulkan_context.cpp  vulkan_context.h
src/gl/: gl_gpu_program.cpp  gl_gpu_program.h  gl_object_3d.cpp  gl_object_3d.h  gl_simple_shader.cpp  gl_simple_shader.h  gl_wrapper.cpp  gl_wrapper.h  opengl_context.cpp  opengl_context.h  render_state.cpp  render_state.h  simple_scene.cpp  simple_scene.h  surface_texture.cpp  surface_texture.h
src/vk/: vulkan_context.cpp  vulkan_context.h
